# localai-platform

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  start.sh
backend/: .dockerignore  Dockerfile  main.py  requirements.txt
backend/data/: jobs.json  profiles.json  settings.json
backend/data/instructions/6a2699f5-dda8-4a7a-a808-6d666f65c2bf/: Name.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/components/: Astronaut.tsx  OnboardingChecklist.tsx  ProfileSelector.tsx  SetupWizard.tsx  Sidebar.tsx  SplashScreen.tsx  StarField.tsx  Toast.tsx  TopBar.tsx
frontend/src/lib/: server.ts
frontend/src/pages/: ChatPage.tsx  DataPage.tsx  DocumentsPage.tsx  HealthPage.tsx  InstructionsPage.tsx  ModelsPage.tsx  ProfilesPage.tsx  SettingsPage.tsx  TrainingPage.tsx
