[package]
name = "skailer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "skailer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = [] }
tauri-plugin-shell  = "2"
tauri-plugin-dialog = "2"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
tokio               = { version = "1", features = ["full"] }
reqwest             = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
panic         = "abort"
